@@ -1,3 +1,9 @@
+2005-03-08  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* asteroids.tcl: redo bindGameKeys to use virtual events.  Add
+	Return as a 'fire' alternative key.
+	Add an hit accuracy counter in the bottom right corner.
+
 2005-03-02  Jeff Godfrey <jeff_godfrey@pobox.com>
 
     * asteroids.tcl
